--- a/Virtualization/KVM/2. 模块初始化/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化/1. KVM模块初始化.md
@@ -113,9 +113,24 @@ vmx_init()                               // 初始化入口
 
 # 3. kvm_init: 初始化 kvm 框架
 
-在`virt/kvm/kvm_main.c`中
+vmx.c定义了**vmx的架构下的操作函数**`vmx_x86_ops`, 其他架构也有自己的定义
 
-vmx.c定义了vmx的架构下的操作函数`vmx_x86_ops`, 其他架构也有自己的定义
+```cpp
+// arch/x86/include/asm/kvm_host.h
+struct kvm_x86_ops {
+		int (*cpu_has_kvm_support)(void);	/* __init */
+		int (*disabled_by_bios)(void);		/* __init */
+		......
+
+}
+
+// arch/x86/kvm/vmx/vmx.c
+static struct kvm_x86_ops vmx_x86_ops __ro_after_init = {
+		.cpu_has_kvm_support = cpu_has_kvm_support,
+		.disabled_by_bios = vmx_disabled_by_bios,
+		......
+};
+```
 
 `vmx_init()`将自己的`vmx_x86_ops`作为参数传了进去
 
@@ -189,10 +204,17 @@ int kvm_mmu_module_init(void)
 
 ### 3.1.5. 设置全局的 kvm_x86_ops
 
+在 **arch/x86/kvm/x86.c** 中，定义了名为 **kvm\_x86\_ops** 的**静态变量**，通过**export\_symbol 宏**在 **全局范围！！！** 内导出。
+
 ```cpp
+// arch/x86/kvm/x86.c
 struct kvm_x86_ops *kvm_x86_ops __read_mostly;
 EXPORT_SYMBOL_GPL(kvm_x86_ops);
+```
 
+给全局`kvm_x86_ops`赋值
+
+```cpp
 kvm_x86_ops = ops;
 ```
 
