--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -527,12 +527,12 @@ PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> 
 
 ```cpp
 handle_io()  // io vmexit入口
- ├─ dev->ops->write()     
+ ├─ dev->ops->write();     // pit设备的write调用
  |   ├─ pit_ioport_write();  // 写pit io入口
- |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
- |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 分配irq source id
- |   |   ├─ pid = get_pid(task_tgid(current)); // 
- |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 在cpu0上创建PIT的worker内核线程
+ |   |   ├─ struct kvm_pit *pit = dev_to_pit();  // 获取pit
+ |   |   ├─ pit_load_count(); // 分配irq source id
+ |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
+ |   |   ├─ create_pit_timer(); // 创建pit timer
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 超时work, pit_do_work用来向客户机注入时钟中断
  |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // pit hrtimer的初始化, 这个高精准定时器就作为虚拟时钟的时钟源
  |   |   ├─ it_state->timer.function = pit_timer_fn; // pit hrtimer的处理函数
@@ -541,7 +541,7 @@ handle_io()  // io vmexit入口
  |   |   ├─ kvm_pit_reset(pit); // 重置pit, 会创建pit定时器
  |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
- |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
+ |   |   |   |   ├─ 
  |   |   |   |   └─ destroy_pit_timer(); // 使timer无效
  |   |   |   |       ├─ hrtimer_cancel(); // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
  |   |   |   |       └─ kthread_flush_work(); // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
