--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -191,8 +191,8 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
  |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
  |   |   |   |   └─ destroy_pit_timer(); // 使timer无效
- |   |   |   |       ├─ hrtimer_cancel(); // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
- |   |   |   |       └─ kthread_flush_work(); // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
+ |   |   |   |       ├─ hrtimer_cancel(&pit->pit_state.timer); // 取消pit的定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
+ |   |   |   |       └─ kthread_flush_work(&pit->expired); // 停止worker前, 保证pit的超时work已完成, 因为pit的work没有执行, 所以不涉及
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
@@ -437,9 +437,10 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 static void destroy_pit_timer(struct kvm_pit *pit)
 {
         // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作在当前流程也就没作用
+        // 取消pit的定时器
         hrtimer_cancel(&pit->pit_state.timer);
         // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以在当前流程不涉及
-        // 清理超时的work
+        // 清理pit的超时work
         kthread_flush_work(&pit->expired);
 }
 ```
@@ -532,19 +533,13 @@ handle_io()  // io vmexit入口
  |   |   ├─ struct kvm_pit *pit = dev_to_pit();  // 获取pit
  |   |   ├─ pit_load_count(); // 分配irq source id
  |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
- |   |   ├─ create_pit_timer(); // 创建pit timer
- |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 超时work, pit_do_work用来向客户机注入时钟中断
- |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // pit hrtimer的初始化, 这个高精准定时器就作为虚拟时钟的时钟源
- |   |   ├─ it_state->timer.function = pit_timer_fn; // pit hrtimer的处理函数
- |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
- |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 
- |   |   ├─ kvm_pit_reset(pit); // 重置pit, 会创建pit定时器
- |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
+ |   |   ├─ create_pit_timer(); // 创建pit timer定时器
+ |   |   |   ├─ hrtimer_cancel(&ps->timer); // 取消之前的定时器
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
  |   |   |   |   ├─ 
  |   |   |   |   └─ destroy_pit_timer(); // 使timer无效
  |   |   |   |       ├─ hrtimer_cancel(); // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
- |   |   |   |       └─ kthread_flush_work(); // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
+ |   |   |   |       └─ kthread_flush_work(&pit->expired); // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
@@ -561,7 +556,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
                                 struct kvm_io_device *this,
                             gpa_t addr, int len, const void *data)
 {
-        // 
+        // 获取pit
         struct kvm_pit *pit = dev_to_pit(this);
         struct kvm_kpit_state *pit_state = &pit->pit_state;
         int channel, access;
@@ -610,6 +605,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
                         }
                 }
         } else {
+                // addr不为3
                 /* Write Count. */
                 s = &pit_state->channels[addr];
                 switch (s->write_state) {
@@ -635,11 +631,11 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         return 0;
 }
 ```
+关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
 
 ### 5.4.3. create_pit_timer(): 创建定时器
 
-每个1ms产生一次中断, 这个是符合物理真实pit功能的
-此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
+注册的中断处理函数`pit_timer_fn`;
 
 ```cpp
 #define NSEC_PER_SEC 1000000000L
@@ -655,15 +651,14 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
             ps->flags & KVM_PIT_FLAGS_HPET_LEGACY)
                 return;
         // 间隔时间, 定时器超时时间
-        // 这里 val 是 0x10000
         interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ);
 
         pr_debug("create pit timer, interval is %llu nsec\n", interval);
 
         /* TODO The new value only affected after the retriggered */
-        // 取消之前的定时器
+        // 取消pit定时器
         hrtimer_cancel(&ps->timer);
-        // 清理超时的work
+        // 清理pit超时的work
         kthread_flush_work(&pit->expired);
         // 设置定时器的超时时间
         ps->period = interval;
