--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -534,8 +534,12 @@ handle_io()  // io vmexit入口
  |   |   ├─ pit_load_count(); // 分配irq source id
  |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
  |   |   ├─ create_pit_timer(); // 创建pit timer定时器
- |   |   |   ├─ hrtimer_cancel(&ps->timer); // 取消之前的定时器
- |   |   |   ├─ pit_load_count(pit, i, 0); // 
+ |   |   |   ├─ s64 interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 计算间隔时间, 即定时器超时时间
+ |   |   |   ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
+ |   |   |   ├─ kthread_flush_work(&pit->expired); // 清理pit超时的work
+ |   |   |   ├─ ps->period = interval; // 设置pit的超时时间
+ |   |   |   ├─ ps->is_periodic = is_period; // 是否周期触发
+ |   |   |   └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用
  |   |   |   |   ├─ 
  |   |   |   |   └─ destroy_pit_timer(); // 使timer无效
  |   |   |   |       ├─ hrtimer_cancel(); // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
@@ -660,7 +664,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
         hrtimer_cancel(&ps->timer);
         // 清理pit超时的work
         kthread_flush_work(&pit->expired);
-        // 设置定时器的超时时间
+        // 设置的超时时间
         ps->period = interval;
         // 是否周期触发
         ps->is_periodic = is_period;
@@ -688,6 +692,9 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
                       HRTIMER_MODE_ABS);
 }
 ```
+
+这里的`&ps->timer`是在pit初始化时候创建的, 
+
 
 1. 根据
 
