--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -24,7 +24,7 @@
     - [5.5.1. 整体流程](#551-整体流程)
     - [5.5.2. 入口代码](#552-入口代码)
     - [5.5.3. create_pit_timer(): 创建定时器](#553-create_pit_timer-创建定时器)
-    - [5.5.4. pit_timer_fn(): 中断流程](#554-pit_timer_fn-中断流程)
+    - [5.5.4. pit_timer_fn(): 定时器中断](#554-pit_timer_fn-定时器中断)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -676,13 +676,13 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
                         ps->period = min_period;
                 }
         }
-        /*启用真正的高精准时钟*/
+        // 启用真正的高精准时钟, 第二个参数是超时时间
         hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval),
                       HRTIMER_MODE_ABS);
 }
 ```
 
-这里的pit定时器`&ps->timer`是在pit初始化时候创建的, `hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);`, 这里通过`hrtimer_start();`启用, 第二个参数是设置超时参数
+这里的pit定时器`&ps->timer`是在pit初始化时候创建的, `hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);`, 这里通过`hrtimer_start();`启用, 第二个参数是**设置超时参数**
 
 这个函数也做了几件事情，可以总结如下2点：
 
@@ -691,9 +691,11 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 说白了时钟定时器创建就是初始化了时钟中断。 
 
-### 5.5.4. pit_timer_fn(): 中断流程
+pit初始化时候也注册了定时器的中断处理函数`it_state->timer.function = pit_timer_fn;`
 
-虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
+### 5.5.4. pit_timer_fn(): 定时器中断
+
+注册的定时器处理函数为：
 
 ```cpp
 static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
