--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -665,6 +665,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
          * interval, since the hrtimers are not throttled by the host
          * scheduler.
          */
+        // 周期性定时器
         if (ps->is_periodic) {
                 s64 min_period = min_timer_period_us * 1000LL;
 
@@ -711,8 +712,9 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
         // 让worker(pt->worker, 内核线程)开始工作(pt->expired)
         // 工作的处理函数是pt->expired->func
         kthread_queue_work(pt->worker, &pt->expired);
-        // 周期性的
+        // 定时器是周期性触发
         if (ps->is_periodic) {
+                // 再次启动定时器
                 hrtimer_add_expires_ns(&ps->timer, ps->period);
                 return HRTIMER_RESTART;
         } else
@@ -720,7 +722,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 }
 ```
 
-将超时work添加到工作线程, 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
+将超时work(`&pt->expired`)添加到工作线程(`pt->worker`), 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
 
 ```cpp
 static void pit_do_work(struct kthread_work *work)
