--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -24,7 +24,8 @@
     - [5.5.1. 整体流程](#551-整体流程)
     - [5.5.2. 入口代码](#552-入口代码)
     - [5.5.3. create_pit_timer(): 创建定时器](#553-create_pit_timer-创建定时器)
-    - [5.5.4. pit_timer_fn(): 定时器中断](#554-pit_timer_fn-定时器中断)
+    - [5.5.4. pit_timer_fn(): 定时器中断函数](#554-pit_timer_fn-定时器中断函数)
+    - [pit_do_work(): 时钟中断注入](#pit_do_work-时钟中断注入)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -667,6 +668,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
          */
         // 周期性定时器
         if (ps->is_periodic) {
+                // 最小周期时间
                 s64 min_period = min_timer_period_us * 1000LL;
 
                 if (ps->period < min_period) {
@@ -694,7 +696,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 pit初始化时候也注册了定时器的中断处理函数`it_state->timer.function = pit_timer_fn;`
 
-### 5.5.4. pit_timer_fn(): 定时器中断
+### 5.5.4. pit_timer_fn(): 定时器中断函数
 
 注册的定时器处理函数为：
 
@@ -723,6 +725,12 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 ```
 
 将超时work(`&pt->expired`)添加到工作线程(`pt->worker`), 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
+
+如果定时器周期触发，则再次启动定时器，否则销毁, 详细看hrtimer的机制
+
+### pit_do_work(): 时钟中断注入
+
+当定时器将时钟中断pending增加，并且添加完工作队列以后，接着就触发下面的时钟中断注入，如果上一个中断被接收，接着触发下一个。
 
 ```cpp
 static void pit_do_work(struct kthread_work *work)
